# microdb

./: .gitignore  Cargo.toml  README.md  setup.py  tox.ini
microdb/: __init__.py
src/: bin.rs  lib.rs  microdb.rs  utils.rs
tests/: test_word_count.py
