[package]
authors = ["Messense Lv <messense@icloud.com>"]
name = "microdb"
version = "0.1.0"
edition = "2018"

[dependencies]
rayon = "1.4.1"
pyo3 = { version = "0.12.3", features = ["extension-module"] }
sled = "0.34.4"
proc-macro-error = "1.0.4"

[lib]
name = "microdb"
crate-type = ["cdylib"]
proc-macro = true

[[bin]]
name = "microdbbin"
path = "src/bin.rs"
